--- a/templates/Admin/Addemploi.html.twig
+++ b/templates/Admin/Addemploi.html.twig
@@ -11,7 +11,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 		<title>
 
-			Now UI Dashboard  by Creative Tim
+			Khadamni
 
 
 		</title>
@@ -75,11 +75,9 @@ f.parentNode.insertBefore(j, f);
 			<div class="sidebar" data-color="orange">
 
 				<div class="logo">
-					<a href="http://www.creative-tim.com/" class="simple-text logo-mini">
-						CT
-					</a>
-					<a href="http://www.creative-tim.com/" class="simple-text logo-normal">
-						Creative Tim
+					<a href="" class="simple-text logo-mini"></a>
+					<a href="" class="simple-text logo-normal">
+						Khadamni
 					</a>
 				</div>
 				<div class="sidebar-wrapper" id="sidebar-wrapper">
@@ -236,18 +234,7 @@ f.parentNode.insertBefore(j, f);
 											{{ form_widget(form.typeContrat, {'attr': {'class': 'form-control'}}) }}
 											{{ form_errors(form.typeContrat) }}
 										</div>
-										<div class="mb-3">
-											{{ form_label(form.datePublication, 'Date de publication', {'label_attr': {'class': 'form-label'}}) }}
-											<div class="input-group">
-												{{ form_widget(form.datePublication, {'attr': {'class': 'form-control'}}) }}
-												<div class="input-group-append">
-													<span class="input-group-text">
-														<i class="far fa-calendar-alt"></i>
-													</span>
-												</div>
-											</div>
-											{{ form_errors(form.datePublication) }}
-										</div>
+
 										<div class="mb-3">
 											<button type="submit" class="btn btn-primary">Sauvegarder</button>
 										</div>
