--- a/templates/Admin/EmploiBack.html.twig
+++ b/templates/Admin/EmploiBack.html.twig
@@ -11,7 +11,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 		<title>
 
-			Now UI Dashboard  by Creative Tim
+			Khadamni
 
 
 		</title>
@@ -72,7 +72,7 @@ f.parentNode.insertBefore(j, f);
 		</noscript>
 
 		<div class="wrapper ">
-			<div class="sidebar" data-color="orange">
+			<div class="sidebar" data-color="blue">
 
 				<div class="logo">
 					<a href="http://www.creative-tim.com/" class="simple-text logo-mini">
@@ -207,7 +207,7 @@ f.parentNode.insertBefore(j, f);
 							<div class="card">
 								<div class="card-header">
 									<h4 class="card-title">
-										Simple Table</h4>
+										List Des Emplois</h4>
 								</div>
 								<div class="card-body">
 									<div class="table-responsive">
@@ -220,19 +220,19 @@ f.parentNode.insertBefore(j, f);
 													Country
 												</th>
 												<th>
-													City
+													Description
 												</th>
 												<th>
-													City
+													Salire
 												</th>
 												<th>
-													City
+													Niveau Experience
 												</th>
 												<th>
-													City
+													Type Contrat
 												</th>
 												<th>
-													City
+													Date Publication
 												</th>
 												<th class="text-right">
 													Action
@@ -264,13 +264,13 @@ f.parentNode.insertBefore(j, f);
 															{{ emploi.datePublication ? emploi.datePublication|date('Y-m-d') : '' }}
 														</td>
 
-														<td class="text-right">
-															<a href="{{ path('app_emploi_edit', {'idEmploi': emploi.idEmploi}) }}" class="">
-																<svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 mr-2 -ml-1" viewbox="0 0 20 20" fill="currentColor">
-																	<path fill-rule="evenodd" d="M14.98 3.53c.292-.292.292-.767 0-1.06l-1.96-1.96c-.292-.292-.767-.292-1.06 0l-1.11 1.11 2.02 2.02 1.11-1.11zm-9.15 9.15l7.778-7.778 2.02 2.02-7.778 7.778H5.53v-2.02zm8.658-.384l-1.414 1.414-2.02-2.02 1.414-1.414c.293-.292.768-.292 1.06 0l.96.96c.292.292.292.767 0 1.06z" clip-rule="evenodd"/>
-																</svg>
-															</a>
-														</td>
+														{# <td class="text-right">
+																																																																																																			<a href="{{ path('app_emploi_edit', {'idEmploi': emploi.idEmploi}) }}" class="">
+																																																																																																				<svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 mr-2 -ml-1" viewbox="0 0 20 20" fill="currentColor">
+																																																																																																					<path fill-rule="evenodd" d="M14.98 3.53c.292-.292.292-.767 0-1.06l-1.96-1.96c-.292-.292-.767-.292-1.06 0l-1.11 1.11 2.02 2.02 1.11-1.11zm-9.15 9.15l7.778-7.778 2.02 2.02-7.778 7.778H5.53v-2.02zm8.658-.384l-1.414 1.414-2.02-2.02 1.414-1.414c.293-.292.768-.292 1.06 0l.96.96c.292.292.292.767 0 1.06z" clip-rule="evenodd"/>
+																																																																																																				</svg>
+																																																																																																			</a>
+																																																																																																		</td> #}
 														<td>
 
 															<form method="post" action="{{ path('app_emploi_delete', {'idEmploi': emploi.idEmploi}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
@@ -316,7 +316,7 @@ f.parentNode.insertBefore(j, f);
 			<div class=" container-fluid ">
 				<nav>
 					<ul>
-						<li><a href="https://www.creative-tim.com/">Creative Tim</a></li>
+						<li><a href="https://www.creative-tim.com/">Khadamni</a></li>
 						<li><a href="http://presentation.creative-tim.com/">About Us</a></li>
 						<li><a href="http://blog.creative-tim.com/">Blog</a></li>
 					</ul>
@@ -325,9 +325,9 @@ f.parentNode.insertBefore(j, f);
 					&copy;
 					<script>
 						document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
-					</script>, Designed by
-					<a href="https://www.invisionapp.com/" target="_blank">Invision</a>. Coded by
-					<a href="https://www.creative-tim.com/" target="_blank">Creative Tim</a>.
+					</script>, 
+																																													 Coded by
+					<a href="" target="_blank">Khadamni</a>.
 				</div>
 			</div>
 		</footer>
@@ -345,7 +345,7 @@ f.parentNode.insertBefore(j, f);
 				<span class="badge filter badge-yellow" data-color="yellow"></span>
 				<span class="badge filter badge-blue" data-color="blue"></span>
 				<span class="badge filter badge-green" data-color="green"></span>
-				<span class="badge filter badge-orange active" data-color="orange"></span>
+				<span class="badge filter badge-orange active" data-color="blue"></span>
 				<span class="badge filter badge-red" data-color="red"></span>
 			</div>
 			<div class="clearfix"></div>
