--- a/templates/favoris/index.html.twig
+++ b/templates/favoris/index.html.twig
@@ -6,12 +6,6 @@
 	<link rel="stylesheet" href="{{ asset('formation.css') }}">
 	{{ encore_entry_link_tags('app') }}
 {% endblock %}
-{% block javascripts %}
-	{{ encore_entry_script_tags('app') }}
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-	{# // <script defer src="{{ asset('search.js') }}"></script> #}
-
-{% endblock %}
 
 
 {% block content %}
@@ -21,7 +15,7 @@
 				Développez votre carrière en IT avec
 				<span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">Khadamni</span>
 			</h1>
-			<p class="text-lg font-normal text-gray-300 lg:text-xl ">Suivez vos emplois favoris en informatique sur mesure avec Khadamni</p>
+			<p class="text-lg font-normal text-gray-300 lg:text-xl ">Suivez vos emplois favoris en informatique En utilisant Khadamni, vous pouvez économiser du temps et de l'énergie en évitant de chercher des offres d'emploi qui ne correspondent pas à vos critères. Au lieu de cela, vous pouvez vous concentrer sur les offres qui vous intéressent vraiment et maximiser vos chances d'obtenir un emploi qui vous convient parfaitement</p>
 		</div>
 
 
@@ -32,42 +26,6 @@
 
 				<div class="relative overflow-x-auto  border-2 border-white border-opacity-5 shadow-2xl sm:rounded-lg">
 					<table class="w-full text-sm text-left text-gray-400">
-						<tr>
-							<div
-								class="flex">
-								{# <div class="dropdown-btn flex-shrink-0">
-																								                                                                        <button id="menu-btn" class=" py-2.5 px-4 text-sm font-medium text-center  bg-blue-700 hover:bg-blue-800  text-white " value="nomFormation">
-																								                                                                            <span class="Btntxt">Formation</span>
-																								                                                                            <svg aria-hidden="true" class="w-4 h-4 ml-1" fill="currentColor" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-																								                                                                                <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path>
-																								                                                                            </svg>
-																								                                                                        </button>
-																								                                                                        <ul class="drop hidden divide-y-2 divide-gray-100 bg-blue-500">
-																								                                                                            <li>
-																								                                                                                <button class="dbtns px-4 py-1 border-t-2 border-gray-100 hover:bg-blue-800 text-sm font-medium text-white" value="nomFormateur">Formateur</button>
-																								                                                                            </li>
-																								                                                                            <li>
-																								                                                                                <button class="dbtns px-4 py-1  hover:bg-blue-800 text-sm font-medium text-white" value="prix">Prix</button>
-																								                                                                            </li>
-																								                                    
-																								                                                                        </ul>
-																								                                    
-																								                                                                    </div> #}
-
-
-								<div class="relative w-full">
-									<input type="search" id="search-dropdown" class="block p-2.5 w-full z-20 text-sm  rounded-r-lg  bg-white bg-opacity-30    placeholder-gray-800 text-blue-900" placeholder="Recherchez les formations par nom, formateur ou prix..." required>
-									<button class="absolute top-0 right-0 p-2.5 text-sm font-medium text-white  rounded-r-lg  bg-blue-700 cursor-default">
-										<svg aria-hidden="true" class="w-5 h-5" fill="none" stroke="currentColor" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-											<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
-										</svg>
-										<span class="sr-only">Search</span>
-									</button>
-								</div>
-							</div>
-
-
-						</tr>
 
 
 						<thead class=" uppercase font-medium bg-white bg-opacity-40 text-blue-600">
@@ -129,5 +87,5 @@
 
 			</div>
 		</div>
-
-	{% endblock %}
+	</div>
+</div>{% endblock %}
