--- a/templates/candidature/index.html.twig
+++ b/templates/candidature/index.html.twig
@@ -1,6 +1,22 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}candidatures index
+{% block stylesheets %}
+	{{ parent() }}
+	<style>
+		footer {
+			margin-top: 0; !important;
+		}
+		.slider-range-display {
+			background-color: #f5f5f5;
+			border: 1px solid #ccc;
+			border-radius: 3px;
+			color: #333;
+			font-size: 14px;
+			font-weight: bold;
+			padding: 5px;
+			width: 130px;
+		}
+	</style>
 {% endblock %}
 
 
@@ -17,124 +33,124 @@
 
 
 	</div>
-
-
-	<div class="relative overflow-x-auto shadow-md sm:rounded-lg mt-5 mb-5 w-full">
-
-		<table class="w-full text-base text-left text-gray-500 dark:text-gray-400">
-			<thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
-				<tr>
-
-					<th scope="col" class="px-6 py-3">
-						<div class="flex items-center">
-							date
-							<a href="#">
-								<svg xmlns="http://www.w3.org/2000/svg" class="w-3 h-3 ml-1" aria-hidden="true" fill="currentColor" viewbox="0 0 320 512"><path d="M27.66 224h264.7c24.6 0 36.89-29.78 19.54-47.12l-132.3-136.8c-5.406-5.406-12.47-8.107-19.53-8.107c-7.055 0-14.09 2.701-19.45 8.107L8.119 176.9C-9.229 194.2 3.055 224 27.66 224zM292.3 288H27.66c-24.6 0-36.89 29.77-19.54 47.12l132.5 136.8C145.9 477.3 152.1 480 160 480c7.053 0 14.12-2.703 19.53-8.109l132.3-136.8C329.2 317.8 316.9 288 292.3 288z"/></svg>
-							</a>
-						</div>
-					</th>
-					<th scope="col" class="px-6 py-3">
-						<div class="flex items-center">
-							dec
-							<a href="#">
-								<svg xmlns="http://www.w3.org/2000/svg" class="w-3 h-3 ml-1" aria-hidden="true" fill="currentColor" viewbox="0 0 320 512"><path d="M27.66 224h264.7c24.6 0 36.89-29.78 19.54-47.12l-132.3-136.8c-5.406-5.406-12.47-8.107-19.53-8.107c-7.055 0-14.09 2.701-19.45 8.107L8.119 176.9C-9.229 194.2 3.055 224 27.66 224zM292.3 288H27.66c-24.6 0-36.89 29.77-19.54 47.12l132.5 136.8C145.9 477.3 152.1 480 160 480c7.053 0 14.12-2.703 19.53-8.109l132.3-136.8C329.2 317.8 316.9 288 292.3 288z"/></svg>
-							</a>
-						</div>
-					</th>
-
-
-					<th scope="col" class="px-6 py-3">
-						<div class="flex items-center">
-							Actions
-							<a href="#">
-								<svg xmlns="http://www.w3.org/2000/svg" class="w-3 h-3 ml-1" aria-hidden="true" fill="currentColor" viewbox="0 0 320 512"><path d="M27.66 224h264.7c24.6 0 36.89-29.78 19.54-47.12l-132.3-136.8c-5.406-5.406-12.47-8.107-19.53-8.107c-7.055 0-14.09 2.701-19.45 8.107L8.119 176.9C-9.229 194.2 3.055 224 27.66 224zM292.3 288H27.66c-24.6 0-36.89 29.77-19.54 47.12l132.5 136.8C145.9 477.3 152.1 480 160 480c7.053 0 14.12-2.703 19.53-8.109l132.3-136.8C329.2 317.8 316.9 288 292.3 288z"/></svg>
-							</a>
-						</div>
-					</th>
-
-
-				</tr>
-			</thead>
-			<tbody>
-				{% for candidatures in candidatures %}
-					<tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-
-						<td class="px-6 py-4">
-							{{ candidatures.date ? candidatures.date|date('Y-m-d') : '' }}
-						</td>
-						<td class="px-6 py-4">
-							{{ candidatures.idEmploi.description }}
-						</td>
-
-
-						<td class="px-6 py-4 text-right">
-							<form method="post" action="{{ path('app_candidature_delete', {'idCandidature': candidatures.idCandidature}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
-								<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ candidatures.idCandidature) }}">
-								<button class="btn">
-									<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewbox="0 0 24 24">
-										<path d="M0 0h24v24H0V0z" fill="none"/>
-										<path d="M19 7h-3V6c0-1.1-.9-2-2-2H10c-1.1 0-2 .9-2 2v1H5v2h14V7zm-9-1h4v1h-4V6zM4.5 9h15l-1.39 12.63c-.08.69-.67 1.37-1.36 1.37H7.35c-.69 0-1.28-.68-1.36-1.37L4.5 9zm7.5 10c.92 0 1.67.75 1.67 1.67S13.92 22 13 22s-1.67-.75-1.67-1.67.75-1.67 1.67-1.67zm4.92-7l-.71-4H9.79l-.71 4h9.34z"/>
-									</svg>
-								</button>
-							</form>
-						</td>
-					{% else %}
-						<tr>
-							<td colspan="8">no records found</td>
-						</tr>
-					{% endfor %}
-				</tr>
-			</tbody>
-		</tbody>
-	</table>
-</div>
-
-<!-- Modal toggle -->
-<button data-modal-target="defaultModal" data-modal-toggle="defaultModal" class="mt-5 mb-5 block text-white bg-blue-700 hover:bg-transparent-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
-	Afficher le rapport d'égalité des chances
-</button>
-
-<!-- Main modal -->
-<div id="defaultModal" tabindex="-1" aria-hidden="true" class="fixed top-0 left-0 right-0 z-50 hidden w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full">
-	<div
-		class="relative w-full max-w-2xl max-h-full">
-		<!-- Modal content -->
+	<!-- Table section -->
+	<div class="w-full md:w-3/4 px-4">
 		<div
-			class="relative bg-white rounded-lg shadow dark:bg-gray-700">
-			<!-- Modal header -->
-			<div class="flex items-start justify-between p-4 border-b rounded-t dark:border-gray-600">
-				<h3 class="text-xl font-semibold text-gray-900 dark:text-white">
-					Evaluation
-				</h3>
-				<button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="defaultModal">
-					<svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-						<path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
-					</svg>
-					<span class="sr-only">Close modal</span>
-				</button>
-			</div>
-			<!-- Modal body -->
-			<!-- Modal body -->
-			<div class="p-6 space-y-6">
-				<p class="text-base leading-relaxed text-gray-500 dark:text-gray-400">
-					évaluation importante de la qualité des candidatures et de l'égalité des chances dans le processus de sélection en montrant le nombre et le pourcentage
-				</p>
-				<p class="text-base leading-relaxed text-gray-500 dark:text-gray-400">
-					de candidats ayant obtenu une note dans une plage de scores particulière.
-				</p>
-				<div class="border-t border-gray-200 pt-4">
-					<h4 class="text-lg font-semibold mb-2 text-gray-900 dark:text-white">Rapport d'égalité des chances</h4>
-					<div id="">
-						{{ report|raw }}
-					</div>
-				</div>
-			</div>
+			class="p-4 rounded">
+			<!-- Table content -->
+			<div>
+				<table class="text-sm text-left w-full">
+					<caption class="p-5 text-lg font-bold text-left  text-white shadow-2xl">
+						<div class="flex">
+							<div>
+								Mes Candidatures:
+								<p class="mt-1 text-sm font-normal white">Vous pouvez gérer vos Candidatures éxistantes ou ajouter une nouvelle Candidature.</p>
+							</div>
 
 
-			<div class="flex items-center p-6 space-x-2 border-t border-gray-200 rounded-b dark:border-gray-600">
-				<button data-modal-hide="defaultModal" type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">OK</button>
+						</div>
+					</caption>
+
+
+					<thead class="text-xs  whitespace-nowrap uppercase bg-gray-700 text-gray-300">
+
+						<tr>
+							<th scope="col" class="px-6 py-3">
+								Date de candidature
+							</th>
+							<th scope="col" class="px-6 py-3">
+								Titre de l'emploi
+							</th>
+							<th scope="col" class="px-6 py-3">
+								Description de l'emploi
+							</th>
+							<th scope="col" class="px-6 py-3">
+								Action
+							</th>
+
+
+						</tr>
+					</thead>
+					<tbody id="prev-tab">
+						{% for candidatures in candidatures %}
+							<tr class="ligne text-white  whitespace-nowrap ">
+								<th scope="row" class="px-6 py-4">
+									{{ candidatures.date ? candidatures.date|date('Y-m-d') : '' }}
+								</th>
+								<td class="px-6 py-4" style="min-width: 250px;">
+									{{ candidatures.idEmploi.titre}}
+								</td>
+								<td class="px-6 py-4">
+									{{ candidatures.idEmploi.description }}
+								</td>
+
+								<td class="px-6 py-4">
+									<form method="post" action="{{ path('app_candidature_delete', {'idCandidature': candidatures.idCandidature}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+										<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ candidatures.idCandidature) }}">
+										<button class="btn">
+											<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewbox="0 0 24 24">
+												<path d="M0 0h24v24H0V0z" fill="none"/>
+												<path d="M19 7h-3V6c0-1.1-.9-2-2-2H10c-1.1 0-2 .9-2 2v1H5v2h14V7zm-9-1h4v1h-4V6zM4.5 9h15l-1.39 12.63c-.08.69-.67 1.37-1.36 1.37H7.35c-.69 0-1.28-.68-1.36-1.37L4.5 9zm7.5 10c.92 0 1.67.75 1.67 1.67S13.92 22 13 22s-1.67-.75-1.67-1.67.75-1.67 1.67-1.67zm4.92-7l-.71-4H9.79l-.71 4h9.34z"/>
+											</svg>
+										</button>
+									</form>
+								</td>
+							</tr>
+						{% endfor %}
+					</tbody>
+					<tbody id="new-tab"></tbody>
+				</table>
 
 			</div>
 		</div>
 	</div>
-</div>{% endblock %}
+	<!-- Modal toggle -->
+	<button data-modal-target="defaultModal" data-modal-toggle="defaultModal" class="mt-5 mb-5 block text-white bg-blue-700 hover:bg-transparent-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
+		Afficher le rapport d'égalité des chances
+	</button>
+
+	<!-- Main modal -->
+	<div id="defaultModal" tabindex="-1" aria-hidden="true" class="fixed top-0 left-0 right-0 z-50 hidden w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full">
+		<div
+			class="relative w-full max-w-2xl max-h-full">
+			<!-- Modal content -->
+			<div
+				class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+				<!-- Modal header -->
+				<div class="flex items-start justify-between p-4 border-b rounded-t dark:border-gray-600">
+					<h3 class="text-xl font-semibold text-gray-900 dark:text-white">
+						Evaluation
+					</h3>
+					<button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="defaultModal">
+						<svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+							<path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+						</svg>
+						<span class="sr-only">Close modal</span>
+					</button>
+				</div>
+				<!-- Modal body -->
+				<!-- Modal body -->
+				<div class="p-6 space-y-6">
+					<p class="text-base leading-relaxed text-gray-500 dark:text-gray-400">
+						évaluation importante de la qualité des candidatures et de l'égalité des chances dans le processus de sélection en montrant le nombre et le pourcentage
+					</p>
+					<p class="text-base leading-relaxed text-gray-500 dark:text-gray-400">
+						de candidats ayant obtenu une note dans une plage de scores particulière.
+					</p>
+					<div class="border-t border-gray-200 pt-4">
+						<h4 class="text-lg font-semibold mb-2 text-gray-900 dark:text-white">Rapport d'égalité des chances</h4>
+						<div id="">
+							{{ report|raw }}
+						</div>
+					</div>
+				</div>
+
+
+				<div class="flex items-center p-6 space-x-2 border-t border-gray-200 rounded-b dark:border-gray-600">
+					<button data-modal-hide="defaultModal" type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">OK</button>
+
+				</div>
+			</div>
+		</div>
+	</div>
+</div></div>{% endblock %}
